Adjust visibility of items in import ROM view.

--- a/RomRepoMgr/Views/ImportRomFolder.axaml
+++ b/RomRepoMgr/Views/ImportRomFolder.axaml
@@ -26,7 +26,8 @@
             <Button Content="{x:Static resources:Localization.ChooseLabel}"
                     Command="{Binding SelectFolderCommand, Mode=OneWay}"
                     HorizontalAlignment="Left"
-                    VerticalAlignment="Center" />
+                    VerticalAlignment="Center"
+                    IsVisible="{Binding CanChoose}" />
             <TextBlock Text="{x:Static resources:Localization.PathLabel}"
                        FontWeight="Bold"
                        VerticalAlignment="Center" />
