--- a/RomRepoMgr/Views/SettingsDialog.axaml
+++ b/RomRepoMgr/Views/SettingsDialog.axaml
@@ -41,7 +41,7 @@
         <vm:SettingsViewModel />
     </Design.DataContext>
     <Border Padding="15">
-        <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto">
+        <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto">
             <Grid Grid.Row="0"
                   ColumnDefinitions="*,250,Auto">
                 <TextBlock Grid.Column="0"
@@ -135,7 +135,21 @@
                        VerticalAlignment="Center"
                        Text="{Binding UnArVersion, Mode=OneWay}"
                        FontWeight="Bold" />
-            <StackPanel Grid.Row="5"
+            <Grid Grid.Row="5"
+                  ColumnDefinitions="Auto, *">
+                <TextBlock Grid.Column="0"
+                           VerticalAlignment="Center"
+                           Text="{x:Static resources:Localization.CompressionType}"
+                           FontWeight="Bold"
+                           Padding="5" />
+                <ComboBox Grid.Column="1"
+                          HorizontalAlignment="Stretch"
+                          VerticalAlignment="Center"
+                          SelectedItem="{Binding Compression, Mode=TwoWay}"
+                          ItemsSource="{Binding CompressionTypes, Mode=OneWay}"
+                          Padding="5" />
+            </Grid>
+            <StackPanel Grid.Row="6"
                         Orientation="Horizontal"
                         HorizontalAlignment="Right">
                 <Button HorizontalAlignment="Right"
