Add support for internal decompressor.

--- a/RomRepoMgr/Views/SettingsDialog.axaml
+++ b/RomRepoMgr/Views/SettingsDialog.axaml
@@ -41,7 +41,7 @@
         <vm:SettingsViewModel />
     </Design.DataContext>
     <Border Padding="15">
-        <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto">
+        <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto">
             <Grid Grid.Row="0"
                   ColumnDefinitions="*,250,Auto">
                 <TextBlock Grid.Column="0"
@@ -108,8 +108,15 @@
                     <TextBlock Text="{x:Static resources:Localization.ChooseLabel}" />
                 </Button>
             </Grid>
-            <Grid Grid.Row="3"
-                  ColumnDefinitions="*,250,Auto">
+            <CheckBox Grid.Row="2"
+                      IsChecked="{Binding UseInternalDecompressor, Mode=TwoWay}">
+                <CheckBox.Content>
+                    <TextBlock Text="{x:Static resources:Localization.UseInternalDecompressorLabel}" />
+                </CheckBox.Content>
+            </CheckBox>
+            <Grid Grid.Row="4"
+                  ColumnDefinitions="*,250,Auto"
+                  IsVisible="{Binding !UseInternalDecompressor}">
                 <TextBlock Grid.Column="0"
                            HorizontalAlignment="Right"
                            VerticalAlignment="Center"
@@ -130,12 +137,13 @@
                     <TextBlock Text="{x:Static resources:Localization.ChooseLabel}" />
                 </Button>
             </Grid>
-            <TextBlock Grid.Row="4"
+            <TextBlock Grid.Row="5"
                        HorizontalAlignment="Left"
                        VerticalAlignment="Center"
                        Text="{Binding UnArVersion, Mode=OneWay}"
-                       FontWeight="Bold" />
-            <Grid Grid.Row="5"
+                       FontWeight="Bold"
+                       IsVisible="{Binding !UseInternalDecompressor}" />
+            <Grid Grid.Row="6"
                   ColumnDefinitions="Auto, *">
                 <TextBlock Grid.Column="0"
                            VerticalAlignment="Center"
@@ -149,7 +157,7 @@
                           ItemsSource="{Binding CompressionTypes, Mode=OneWay}"
                           Padding="5" />
             </Grid>
-            <StackPanel Grid.Row="6"
+            <StackPanel Grid.Row="7"
                         Orientation="Horizontal"
                         HorizontalAlignment="Right">
                 <Button HorizontalAlignment="Right"
